<resources>
  <string name="app_name">ijool</string>
  <string name="password">Password</string>
  <string name="username">Username</string>
  <string name="forget_password">Forget Password ?</string>
  <string name="sign_in">Sign In</string>
  <string name="balance">Balance</string>
  <string name="example_balance">0.00000000 DOGE</string>
  <string name="wallet_bot">Wallet Bot</string>
  <string name="wallet">Wallet</string>
  <string name="email">Email</string>
  <string name="sign_up">Sign Up</string>
  <string name="bot">Bot</string>
  <string name="name">Name</string>
  <string name="link">Link</string>
  <string name="open">Open</string>
  <string name="mining">MINING</string>
  <string name="icon">icon</string>
  <string name="ninku">Ninku</string>
  <string name="mosee">Mosee</string>
  <string name="tsunami">Tsunami</string>
  <string name="obito">Obito</string>
  <string name="faye">Faye</string>
  <string name="orion">Orion</string>
  <string name="funk">Funk</string>
  <string name="description_bot">IJOOL.NET is only a tool to facilitate users of using 999doge.com</string>
  <string name="withdraw">Deposit/Withdraw</string>
  <string name="default_mining_size">Default Mining Size</string>
  <string name="mining_size">Mining Size</string>
  <string name="reset">Reset</string>
  <string name="profit">Profit</string>
  <string name="half">Half</string>
  <string name="double_value">Double</string>
  <string name="chance_to_win">Chance to win (%)</string>
  <string name="share_code">Share Code</string>
  <string name="start_bot">Start</string>
  <string name="stop_bot">Stop</string>
  <string name="deposit_doge">Deposit Doge</string>
  <string name="deposit_bot">Deposit Bot</string>
  <string name="withdraw_doge">Withdraw Doge</string>
  <string name="withdraw_bot">Withdraw Bot</string>
  <string name="amount">Amount</string>
  <string name="send">Send</string>
  <string name="send_all">Send All</string>
  <string name="transfer_doge_to_bot">Transfer Doge to Bot</string>
  <string name="transfer_bot_to_doge">Transfer Bot to Doge</string>
  <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>