<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity"
    android:background="@drawable/background">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_name"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp"
        android:padding="10dp">

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          android:id="@+id/editTextUsername"
          android:background="@drawable/edit_text"
          android:drawableStart="@drawable/ic_baseline_account_circle"
          android:drawablePadding="15dp"
          android:drawableTint="@color/textPrimary"
          android:textColor="@color/textPrimary"
          android:hint="@string/username"
          android:autofillHints="@string/username"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="15dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          android:id="@+id/editTextPassword"
          android:background="@drawable/edit_text"
          android:drawableStart="@drawable/ic_baseline_https"
          android:drawablePadding="10dp"
          android:drawableTint="@color/textPrimary"
          android:textColor="@color/textPrimary"
          android:hint="@string/password"
          android:autofillHints="@string/password"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <TextView
          android:text="@string/forget_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textViewForgetPassword"
          android:textColor="@color/textPrimary"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="40dp"/>

      <Button
          android:text="@string/sign_in"
          android:layout_width="200dp"
          android:layout_height="40dp"
          android:id="@+id/buttonLogin"
          android:background="@drawable/button_warning"
          android:textColor="@color/textPrimary"
          android:textSize="17sp"
          android:elevation="10dp"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <TextView
            android:text="@string/don_t_have_an_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/textViewRegister"
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textStyle="bold"/>

      </LinearLayout>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>