<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.WithdrawActivity"
    android:background="@drawable/background_navigation">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/card"
        android:elevation="20dp">

      <FrameLayout
          android:id="@+id/frameLayoutScanner"
          android:layout_width="match_parent"
          android:layout_height="350dp"
          android:background="@drawable/logo"
          android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:elevation="10dp">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textViewBalance"
          android:gravity="center"
          android:textColor="@color/textPrimary"
          android:textSize="18sp"
          android:text="@string/example_balance"
          android:layout_marginBottom="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"
          android:ems="10"
          android:id="@+id/editTextWallet"
          android:background="@drawable/edit_text"
          android:autofillHints="@string/wallet"
          android:drawablePadding="10dp"
          tools:ignore="LabelFor"
          android:hint="@string/wallet"
          android:textColorHint="@color/Dark"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="numberDecimal"
          android:ems="10"
          android:id="@+id/editTextBalance"
          android:background="@drawable/edit_text"
          android:drawablePadding="10dp"
          tools:ignore="LabelFor"
          android:hint="@string/amount"
          android:textColorHint="@color/Dark"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="20dp"/>

      <Button
          android:text="@string/send"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/buttonSend"
          android:background="@drawable/button_success"
          android:textColor="@color/textSecondary"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>