<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.bot.NinkuActivity"
    android:background="@color/background"
    android:keepScreenOn="true">

  <com.github.mikephil.charting.charts.LineChart
      android:id="@+id/chart"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@id/body"/>

  <LinearLayout
      android:id="@+id/body"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@drawable/card"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:padding="10dp"
      android:elevation="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chart"
      app:layout_constraintBottom_toTopOf="@id/footer">

    <TextView
        android:text="@string/mining_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textPrimary"
        android:textAlignment="center"/>

    <TextView
        android:text="@string/example_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPayIn"
        android:textColor="@color/textPrimary"
        android:textAlignment="center"/>

    <TextView
        android:text="@string/bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textPrimary"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/example_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewBalanceBot"
        android:textColor="@color/textPrimary"
        android:textSize="18sp"/>

  </LinearLayout>

  <LinearLayout
      android:id="@+id/footer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintTop_toBottomOf="@id/body"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp">

    <Button
        android:text="@string/start_bot"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:id="@+id/buttonStart"
        android:layout_weight="1"
        android:layout_marginEnd="5dp"
        android:background="@drawable/button_warning"
        android:textColor="@color/textPrimary"
        android:enabled="true"
        tools:ignore="ButtonStyle"/>

    <Button
        android:text="@string/stop_bot"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:id="@+id/buttonStop"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:background="@drawable/button_danger"
        android:textColor="@color/textSecondary"
        android:enabled="false"
        tools:ignore="ButtonStyle"/>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>