<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.bot.MiningActivity"
    android:background="@color/background"
    android:keepScreenOn="true">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:elevation="10dp">

      <TextView
          android:text="@string/bot"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"/>

      <TextView
          android:text="@string/example_balance"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textViewBalanceBot"
          android:textColor="@color/textPrimary"
          android:textSize="18sp"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textViewProfit"
          android:textColor="@color/textPrimary"
          android:gravity="center"
          android:textSize="19sp"
          android:textStyle="bold"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextDefaultMining"
        android:background="@drawable/edit_text"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/default_mining_size"
        android:importantForAutofill="no"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:elevation="5dp">

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="numberDecimal"
          android:ems="10"
          android:id="@+id/editTextMining"
          android:background="@drawable/edit_text"
          android:hint="@string/mining_size"
          android:importantForAutofill="no"
          android:elevation="2dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <Button
          android:text="@string/mining"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:id="@+id/buttonMining"
          android:background="@drawable/button_success"
          android:textColor="@color/textSecondary"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="20dp"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <Button
            android:text="@string/reset"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/buttonResetMining"
            android:background="@drawable/button_primary"
            android:textColor="@color/textSecondary"
            tools:ignore="ButtonStyle"/>

        <Button
            android:text="@string/double_value"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/buttonDoubleMining"
            android:background="@drawable/button_danger"
            android:textColor="@color/textSecondary"
            tools:ignore="ButtonStyle"/>

        <Button
            android:text="@string/half"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/buttonHalfMining"
            android:background="@drawable/button_warning"
            android:textColor="@color/textSecondary"
            tools:ignore="ButtonStyle"/>

      </LinearLayout>


      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:elevation="10dp">

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="numberDecimal"
          android:ems="10"
          android:id="@+id/editTextChance"
          android:background="@drawable/edit_text"
          android:hint="@string/chance_to_win"
          android:importantForAutofill="no"
          android:elevation="2dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="15dp"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <Button
            android:text="@string/reset"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/buttonResetChance"
            android:background="@drawable/button_primary"
            android:textColor="@color/textSecondary"
            tools:ignore="ButtonStyle"/>

        <Button
            android:text="@string/double_value"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/buttonDoubleChance"
            android:background="@drawable/button_danger"
            android:textColor="@color/textSecondary"
            tools:ignore="ButtonStyle"/>

        <Button
            android:text="@string/half"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/buttonHalfChance"
            android:background="@drawable/button_warning"
            android:textColor="@color/textSecondary"
            tools:ignore="ButtonStyle"/>

      </LinearLayout>


      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

  </LinearLayout>

</ScrollView>